修改页面图片根据语种实时切换

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,11 +3,31 @@
     <div class="buttom">
       <div class="link">{{'contact.contact' | translate}}</div>
       <div class="link-icon">
-        <a href="#"><img src="/assets/img/ic_we_chat.png"></a>
-        <a href="#"><img src="/assets/img/ic_qq.png"></a>
-        <a href="#"><img src="/assets/img/ic_weibo.png"></a>
-        <a href="#"><img src="/assets/img/ic_facebook.png"></a>
-        <a href="#"><img src="/assets/img/ic_telegram.png"></a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
+            <use xlink:href="#icon-weixin"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
+            <use xlink:href="#icon-QQ"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
+            <use xlink:href="#icon-weibo"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
+            <use xlink:href="#icon-facebook"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
+            <use xlink:href="#icon-dianbaoqun"></use>
+          </svg>
+        </a>
       </div>
     </div>
     <div class="foot">
