--- a/src/app/layout/header-fixed/header.component.less
+++ b/src/app/layout/header-fixed/header.component.less
@@ -21,7 +21,7 @@
     width: 12px;
     height: 5px;
     background-color: #16b1e7;
-    margin:52px auto 0 auto;
+    margin:55px auto 0 auto;
   }
   .ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected{
     border-bottom-color:#fff;
@@ -66,7 +66,7 @@
   width:100%;
   position: relative;
   .home-logo{
-    background:url("../../../assets/img/ic_blue_logo.png") top no-repeat;
+    //background:url("../../../assets/img/ic_blue_logo.png") top no-repeat;
     width:86px;
     height: 66px;
     display: inline-block;
