--- a/src/app/routes/index/index.component.less
+++ b/src/app/routes/index/index.component.less
@@ -57,7 +57,7 @@
   width:100%;
   position: relative;
   .home-logo{
-    background:url("../../../assets/img/ic_white_logo.png") top no-repeat;
+    //background:url("../../../assets/img/ic_white_logo.png") top no-repeat;
     width:86px;
     height: 66px;
     display: inline-block;
@@ -147,7 +147,6 @@
   letter-spacing: 0px;
   color: #a8b2c3;
   padding:0 32px;
-  text-align: justify;
   margin-top:34px !important;
 }
 .home-img-text-box{
@@ -188,6 +187,7 @@
 }
 .ic_speed_text{
   float:left;
+  width:80%;
   .ic_speed_text_h{
     font-size: 20px;
     font-weight: normal;
