--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <nz-layout>
-  <app-header></app-header>
+  <app-header (clientOuter)="runParent($event)"></app-header>
   <nz-content>
     <router-outlet></router-outlet>
   </nz-content>
