--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,33 +3,31 @@
     <div class="buttom">
       <div class="link">{{'contact.contact' | translate}}</div>
       <div class="link-icon">
-        <a href="#">
-          <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
-            <use xlink:href="#icon-weixin"></use>
-          </svg>
-        </a>
-        <a href="#">
+        <a href="#" nz-popover [nzContent]="qqTemplate">
           <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
             <use xlink:href="#icon-QQ"></use>
           </svg>
         </a>
-        <a href="#">
+        <a href="https://weibo.com/6625728834/profile?rightmod=1&wvr=6&mod=personinfo" target="_blank">
           <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
             <use xlink:href="#icon-weibo"></use>
           </svg>
         </a>
-        <a href="#">
+        <a href="https://m.facebook.com/AuspiciousElephant/" target="_blank">
           <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
             <use xlink:href="#icon-facebook"></use>
           </svg>
         </a>
-        <a href="#">
+        <a href="https://t.me/joinchat/JD-5ehBE_RGEqWV9r3BiDQ" target="_blank">
           <svg class="icon" aria-hidden="true" style="width:25px;height:22px">
             <use xlink:href="#icon-dianbaoqun"></use>
           </svg>
         </a>
       </div>
     </div>
+    <ng-template #qqTemplate>
+      <img style="width:150px" src="/assets/img/qq_qr.png">
+    </ng-template>
     <div class="foot">
       <a routerLink="/client">{{'home.client' | translate}}</a>
       <a routerLink="/whitepaper">{{'home.whitepaper' | translate}}</a>
